Server: Add list-attempt-headers endpoint
This adds support for listing attempt headers given a message and
attempt id.
